--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ sudo: required
 env:
   global:
     - DOCKER_REPO=dockerpirate/unbound
+    - GIT_TAG=$GIT_TAG
 before_install:
   - curl -fsSL https://get.docker.com | sh
   - echo '{"experimental":"enabled"}' | sudo tee /etc/docker/daemon.json
