--- a/unbound.conf
+++ b/unbound.conf
@@ -11,7 +11,7 @@ server:
 	access-control: 172.16.0.0/12 allow
 	access-control: 10.0.0.0/8 allow
 
-	auto-trust-anchor-file: /var/run/unbound/root.key
+	#auto-trust-anchor-file: /var/run/unbound/root.key
 
 	logfile: ""
 
@@ -21,4 +21,4 @@ server:
 
 	statistics-cumulative: yes
 	
-	include: /opt/unbound/etc/unbound/a-records.conf
+	include: etc/unbound/a-records.conf
