--- a/unbound.conf
+++ b/unbound.conf
@@ -14,6 +14,9 @@ do-ip6: no
 # Use this only when you downloaded the list of primary root servers!
 root-hints: "/etc/unbound/root.hints"
 
+# Anchor
+auto-trust-anchor-file: "/etc/unbound/root.key"
+
 # Trust glue only if it is within the servers authority
 harden-glue: yes
 
