--- a/unbound.conf
+++ b/unbound.conf
@@ -2,12 +2,12 @@ server:
         access-control: 127.0.0.0/8 allow
         access-control: 192.168.0.0/16 allow
         access-control: 172.18.0.0/16 allow
-        access-control: 172.17.0.0/16 allow        
+        access-control: 172.17.0.0/16 allow
         cache-max-negative-ttl: 10
         cache-max-ttl: 86400
         cache-min-ttl: 300
         do-ip4: yes
-        do-ip6: no
+        do-ip6: yes
         do-not-query-localhost: no
         do-tcp: yes
         do-udp: yes
@@ -16,7 +16,7 @@ server:
         harden-dnssec-stripped: yes
         harden-large-queries: yes
         harden-short-bufsize: yes
-        harden-glue: yes        
+        harden-glue: yes
         interface: 0.0.0.0
         logfile: ""
         minimal-responses: no
@@ -38,7 +38,7 @@ server:
         target-fetch-policy: "2 1 0 0 0 0"
         auto-trust-anchor-file: /etc/unbound/root.key
         verbosity: 0
-# Stellt sicher, dass Kernel-Buffer groß genug ist wenn Traffic stark ansteigt 
+# Stellt sicher, dass Kernel-Buffer groß genug ist wenn Traffic stark ansteigt
         so-rcvbuf: 1m
         include: "/etc/unbound/conf.d/*.conf"
         do-daemonize: no
