--- a/unbound.conf
+++ b/unbound.conf
@@ -43,3 +43,6 @@ server:
         include: "/etc/unbound/conf.d/*.conf"
         do-daemonize: no
         username: "unbound"
+# OPTIONAL
+        # "Experemental feature"
+        # use-caps-for-id: yes
