--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ sudo: required
 env:
   global:
     - DOCKER_REPO=dockerpirate/unbound
+    - ALPINE_M=3
+    - ALPINE_P=12
 before_install:
   - curl -fsSL https://get.docker.com | sh
   - echo '{"experimental":"enabled"}' | sudo tee /etc/docker/daemon.json
