--- a/unbound.conf
+++ b/unbound.conf
@@ -27,7 +27,7 @@ server:
         msg-cache-slabs: 4
         num-queries-per-thread: 512
         pidfile: "/var/run/unbound.pid"
-        port: 5053
+        port: 53
         prefetch: yes
         root-hints: /etc/unbound/root.hints
         rrset-roundrobin: yes
@@ -38,7 +38,7 @@ server:
         target-fetch-policy: "2 1 0 0 0 0"
         auto-trust-anchor-file: /etc/unbound/root.key
         verbosity: 0
-# Stellt sicher, dass Kernel-Buffer groß genug ist wenn Traffic stark ansteigt
+# Stellt sicher, dass Kernel-Buffer groß genug ist wenn Traffic stark ansteigt. For busy server set 4m or 8m better.
         so-rcvbuf: 1m
         include: "/etc/unbound/conf.d/*.conf"
         do-daemonize: no
@@ -46,3 +46,14 @@ server:
 # OPTIONAL
         # "Experemental feature"
         # use-caps-for-id: yes
+# Optimised for 4 Core CPU        
+        # num-threads: 4
+        # msg-cache-slabs: 8
+        # rrset-cache-slabs: 8
+        # infra-cache-slabs: 8
+        # key-cache-slabs: 8
+        # outgoing-range: 200
+        # so-sndbuf: 1m <same as so-rcvbuf>
+        # rrset-cache-size: 100m
+        # msg-cache-size: 50m
+        
